--- a/mapping_workbench/frontend/package.json
+++ b/mapping_workbench/frontend/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@auth0/auth0-spa-js": "2.0.4",
     "@aws-amplify/auth": "5.3.6",
+    "@codemirror/lang-yaml": "^6.1.1",
     "@emotion/cache": "11.11.0",
     "@emotion/react": "11.11.0",
     "@emotion/server": "11.11.0",
@@ -42,11 +43,13 @@
     "@mui/x-tree-view": "^7.5.1",
     "@react-pdf/renderer": "3.1.9",
     "@reduxjs/toolkit": "1.9.5",
+    "@uiw/react-codemirror": "^4.23.0",
     "@untitled-ui/icons-react": "0.1.1",
     "apexcharts": "3.40.0",
     "autosuggest-highlight": "^3.3.4",
     "aws-amplify": "5.2.1",
     "axios": "^1.4.0",
+    "codemirror-lang-turtle": "^0.0.2",
     "date-fns": "2.30.0",
     "dotenv": "^16.3.1",
     "draft-js": "0.11.7",
