--- a/.github/workflows/staging-ci-cd-pipeline.yml
+++ b/.github/workflows/staging-ci-cd-pipeline.yml
@@ -10,33 +10,33 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  deploy_and_build:
-#    needs: run_tests
-    name: Build and deploy
-    runs-on: ubuntu-latest
-    environment: staging
-
-    steps:
-    - name: Extract branch name
-      shell: bash
-      run: echo "branch=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" >> $GITHUB_OUTPUT
-      id: extract_branch
-    - name: Install ssh keys
-      run: |
-        install -m 600 -D /dev/null ~/.ssh/id_rsa
-        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-        ssh-keyscan -H ${{ secrets.SSH_HOST }} > ~/.ssh/known_hosts
-
-    - name: connect, pull and build
-      run: |
-        ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "cd ${{ secrets.STAGING_WORK_DIR }} && git checkout ${{ steps.extract_branch.outputs.branch }} && git pull && make build-frontend && make build-backend && exit"
+#  deploy_and_build:
+##    needs: run_tests
+#    name: Build and deploy
+#    runs-on: ubuntu-latest
+#    environment: staging
+#
+#    steps:
+#    - name: Extract branch name
+#      shell: bash
+#      run: echo "branch=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" >> $GITHUB_OUTPUT
+#      id: extract_branch
+#    - name: Install ssh keys
+#      run: |
+#        install -m 600 -D /dev/null ~/.ssh/id_rsa
+#        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+#        ssh-keyscan -H ${{ secrets.SSH_HOST }} > ~/.ssh/known_hosts
+#
+#    - name: connect, pull and build
+#      run: |
+#        ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "cd ${{ secrets.STAGING_WORK_DIR }} && git checkout ${{ steps.extract_branch.outputs.branch }} && git pull && make build-frontend && make build-backend && exit"
 
 #    - name: cleanup
 #      run: rm -rf ~/.ssh
 
   run_tests:
     name: Running tests
-    needs: deploy_and_build
+    #needs: deploy_and_build
     runs-on: ubuntu-latest
     environment: staging
 
