--- a/mapping_workbench/frontend/Makefile
+++ b/mapping_workbench/frontend/Makefile
@@ -25,3 +25,8 @@ install-prod-frontend:
 	@ echo "Installing PROD FRONTEND"
 	@ npm install
 #	@ npm install && npm install -g serve && npm run build && rm -fr node_modules
+
+test-e2e:
+	@ Xvfb :99 -screen 0 1280x1024x24 &
+	@ export DISPLAY=:99
+	@ npm run test-e2e
